feat: add automatic logout when session expired

--- a/turbo.json
+++ b/turbo.json
@@ -24,6 +24,7 @@
     "AUTH_OIDC_AUTO_LOGIN",
     "AUTH_PROVIDERS",
     "AUTH_SECRET",
+    "AUTH_SESSION_EXPIRY_TIME",
     "CI",
     "DISABLE_REDIS_LOGS",
     "DB_URL",
