--- a/turbo.json
+++ b/turbo.json
@@ -22,6 +22,7 @@
     "AUTH_LDAP_USER_MAIL_ATTRIBUTE",
     "AUTH_LDAP_USERNAME_FILTER_EXTRA_ARG",
     "AUTH_OIDC_AUTO_LOGIN",
+    "AUTH_LOGOUT_REDIRECT_URL",
     "AUTH_PROVIDERS",
     "AUTH_SECRET",
     "CI",
