--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,10 @@
     "homarr",
     "jellyfin",
     "mantine",
+    "ajnart",
+    "Meierschlumpf",
+    "manuel-rw",
+    "SeDemal",
     "Sabnzbd",
     "Sonarr",
     "superjson",
