--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -67,6 +67,7 @@
     "react-simple-code-editor": "^0.14.1",
     "sass": "^1.77.8",
     "superjson": "2.2.1",
+    "swagger-ui-react": "^5.17.7",
     "use-deep-compare-effect": "^1.8.1"
   },
   "devDependencies": {
@@ -78,6 +79,7 @@
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@types/swagger-ui-react": "^4.18.3",
     "concurrently": "^8.2.2",
     "eslint": "^9.9.1",
     "node-loader": "^2.0.0",
