refactor: extract typing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,15 +9,16 @@
   "js/ts.implicitProjectConfig.experimentalDecorators": true,
   "prettier.configPath": "./tooling/prettier/index.mjs",
   "cSpell.words": [
+    "ajnart",
     "cqmin",
+    "gridstack",
     "homarr",
     "jellyfin",
     "mantine",
-    "ajnart",
-    "Meierschlumpf",
     "manuel-rw",
-    "SeDemal",
+    "Meierschlumpf",
     "Sabnzbd",
+    "SeDemal",
     "Sonarr",
     "superjson",
     "tabler",
