--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@extractus/feed-extractor": "^7.1.3",
     "@homarr/api": "workspace:^0.1.0",
+    "@homarr/auth": "workspace:^0.1.0",
     "@homarr/common": "workspace:^0.1.0",
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/form": "workspace:^0.1.0",
