--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -27,6 +27,7 @@
     "@homarr/log": "workspace:^",
     "@homarr/modals": "workspace:^0.1.0",
     "@homarr/notifications": "workspace:^0.1.0",
+    "@homarr/server-settings": "workspace:^0.1.0",
     "@homarr/spotlight": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/ui": "workspace:^0.1.0",
@@ -37,7 +38,7 @@
     "@mantine/hooks": "^7.12.1",
     "@mantine/modals": "^7.12.1",
     "@mantine/tiptap": "^7.12.1",
-    "@homarr/server-settings": "workspace:^0.1.0",
+    "@million/lint": "1.0.0-rc.84",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.52.2",
     "@tanstack/react-query-devtools": "^5.52.2",
