--- a/packages/old-schema/package.json
+++ b/packages/old-schema/package.json
@@ -25,7 +25,8 @@
     "@homarr/db": "workspace:^0.1.0",
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0",
-    "superjson": "2.2.1"
+    "superjson": "2.2.1",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
