--- a/packages/cron-jobs/package.json
+++ b/packages/cron-jobs/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@homarr/cron-jobs",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
+  "license": "MIT",
   "type": "module",
   "exports": {
     ".": "./index.ts"
@@ -13,13 +14,13 @@
       ]
     }
   },
-  "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
+  "prettier": "@homarr/prettier-config",
   "dependencies": {
     "@extractus/feed-extractor": "^7.1.3",
     "@homarr/analytics": "workspace:^0.1.0",
@@ -42,6 +43,5 @@
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.9.1",
     "typescript": "^5.5.4"
-  },
-  "prettier": "@homarr/prettier-config"
+  }
 }
