--- a/packages/integrations/package.json
+++ b/packages/integrations/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@homarr/integrations",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
+  "license": "MIT",
+  "type": "module",
   "exports": {
     ".": "./index.ts",
     "./client": "./src/client.ts",
@@ -14,21 +16,20 @@
       ]
     }
   },
-  "license": "MIT",
-  "type": "module",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
+  "prettier": "@homarr/prettier-config",
   "dependencies": {
     "@homarr/common": "workspace:^0.1.0",
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0",
+    "@homarr/translation": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
-    "@jellyfin/sdk": "^0.10.0",
-    "@homarr/translation": "workspace:^0.1.0"
+    "@jellyfin/sdk": "^0.10.0"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
@@ -36,6 +37,5 @@
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.9.1",
     "typescript": "^5.5.4"
-  },
-  "prettier": "@homarr/prettier-config"
+  }
 }
