--- a/packages/notifications/package.json
+++ b/packages/notifications/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@homarr/notifications",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
+  "license": "MIT",
   "type": "module",
   "exports": {
     ".": "./index.ts",
@@ -14,16 +15,16 @@
       ]
     }
   },
-  "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
+  "prettier": "@homarr/prettier-config",
   "dependencies": {
-    "@mantine/notifications": "^7.12.2",
     "@homarr/ui": "workspace:^0.1.0",
+    "@mantine/notifications": "^7.12.2",
     "@tabler/icons-react": "^3.14.0"
   },
   "devDependencies": {
@@ -32,6 +33,5 @@
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.9.1",
     "typescript": "^5.5.4"
-  },
-  "prettier": "@homarr/prettier-config"
+  }
 }
