--- a/packages/ping/package.json
+++ b/packages/ping/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@homarr/ping",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
+  "license": "MIT",
+  "type": "module",
   "exports": {
     ".": "./index.ts"
   },
@@ -12,14 +14,13 @@
       ]
     }
   },
-  "license": "MIT",
-  "type": "module",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
+  "prettier": "@homarr/prettier-config",
   "dependencies": {
     "@homarr/common": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0"
@@ -30,6 +31,5 @@
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.9.1",
     "typescript": "^5.5.4"
-  },
-  "prettier": "@homarr/prettier-config"
+  }
 }
