--- a/packages/server-settings/package.json
+++ b/packages/server-settings/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@homarr/server-settings",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
+  "license": "MIT",
+  "type": "module",
   "exports": {
     ".": "./index.ts"
   },
@@ -12,20 +14,18 @@
       ]
     }
   },
-  "type": "module",
-  "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
+  "prettier": "@homarr/prettier-config",
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.9.1",
     "typescript": "^5.5.4"
-  },
-  "prettier": "@homarr/prettier-config"
+  }
 }
