--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@homarr/widgets",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
+  "license": "MIT",
   "type": "module",
   "exports": {
     ".": "./index.ts",
@@ -14,13 +15,13 @@
       ]
     }
   },
-  "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
+  "prettier": "@homarr/prettier-config",
   "dependencies": {
     "@extractus/feed-extractor": "^7.1.3",
     "@homarr/api": "workspace:^0.1.0",
@@ -35,8 +36,8 @@
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/ui": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
-    "@mantine/hooks": "^7.12.2",
     "@mantine/core": "^7.12.2",
+    "@mantine/hooks": "^7.12.2",
     "@tabler/icons-react": "^3.14.0",
     "@tiptap/extension-color": "2.6.6",
     "@tiptap/extension-highlight": "2.6.6",
@@ -55,8 +56,8 @@
     "@tiptap/starter-kit": "^2.6.6",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "next": "^14.2.7",
     "mantine-react-table": "2.0.0-beta.6",
+    "next": "^14.2.7",
     "react": "^18.3.1",
     "video.js": "^8.17.3"
   },
@@ -67,6 +68,5 @@
     "@types/video.js": "^7.3.58",
     "eslint": "^9.9.1",
     "typescript": "^5.5.4"
-  },
-  "prettier": "@homarr/prettier-config"
+  }
 }
