--- a/packages/old-schema/package.json
+++ b/packages/old-schema/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "type": "module",
   "exports": {
-    ".": "./index.ts"
+    ".": "./index.ts",
+    "./shared": "./src/shared.ts"
   },
   "typesVersions": {
     "*": {
