--- a/packages/old-import/tsconfig.json
+++ b/packages/old-import/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
   },
-  "include": ["*.ts", "src", "../old-import/src/widgets/options.ts"],
+  "include": ["*.ts", "src"],
   "exclude": ["node_modules"]
 }
