--- a/packages/old-schema/package.json
+++ b/packages/old-schema/package.json
@@ -21,7 +21,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "zod": "3.23.8"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
