--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ http {
         listen 7575;
 
         # Route websockets traffic to port 3001
-        location /websockets/ {
+        location /websockets {
             proxy_pass http://${HOSTNAME}:3001;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
