--- a/packages/old-import/package.json
+++ b/packages/old-import/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@homarr/validation",
-  "version": "0.1.0",
+  "name": "@homarr/old-import",
   "private": true,
-  "license": "MIT",
+  "version": "0.1.0",
   "type": "module",
   "exports": {
-    ".": "./index.ts",
-    "./form": "./src/form/i18n.ts"
+    ".": "./index.ts"
   },
   "typesVersions": {
     "*": {
@@ -15,19 +13,21 @@
       ]
     }
   },
+  "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
+    "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit"
   },
-  "prettier": "@homarr/prettier-config",
   "dependencies": {
+    "@homarr/common": "workspace:^0.1.0",
+    "@homarr/db": "workspace:^0.1.0",
     "@homarr/definitions": "workspace:^0.1.0",
+    "@homarr/log": "workspace:^0.1.0",
     "@homarr/old-schema": "workspace:^0.1.0",
-    "@homarr/translation": "workspace:^0.1.0",
-    "zod": "^3.23.8",
-    "zod-form-data": "^2.0.2"
+    "@homarr/validation": "workspace:^0.1.0",
+    "superjson": "2.2.1"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
@@ -35,5 +35,6 @@
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.10.0",
     "typescript": "^5.5.4"
-  }
+  },
+  "prettier": "@homarr/prettier-config"
 }
