--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -15,6 +15,8 @@
   },
   "prettier": "@homarr/prettier-config",
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@homarr/analytics": "workspace:^0.1.0",
     "@homarr/api": "workspace:^0.1.0",
     "@homarr/auth": "workspace:^0.1.0",
