--- a/packages/widgets/package.json
+++ b/packages/widgets/package.json
@@ -23,6 +23,8 @@
   },
   "prettier": "@homarr/prettier-config",
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@extractus/feed-extractor": "^7.1.3",
     "@homarr/api": "workspace:^0.1.0",
     "@homarr/common": "workspace:^0.1.0",
