--- a/packages/integrations/package.json
+++ b/packages/integrations/package.json
@@ -28,6 +28,7 @@
     "@ctrl/qbittorrent": "^9.0.0",
     "@ctrl/transmission": "^6.1.0",
     "@homarr/common": "workspace:^0.1.0",
+    "@homarr/db": "workspace:^0.1.0",
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
