--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,11 +9,17 @@
   "js/ts.implicitProjectConfig.experimentalDecorators": true,
   "prettier.configPath": "./tooling/prettier/index.mjs",
   "cSpell.words": [
+    "ajnart",
     "cqmin",
+    "gridstack",
     "homarr",
     "jellyfin",
     "mantine",
+    "manuel-rw",
+    "Meierschlumpf",
     "overseerr",
+    "Sabnzbd",
+    "SeDemal",
     "Sonarr",
     "superjson",
     "tabler",
