feat: Remove typed-rpc dependency and used fetch instead

--- a/packages/integrations/package.json
+++ b/packages/integrations/package.json
@@ -33,8 +33,7 @@
     "@homarr/log": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
-    "@jellyfin/sdk": "^0.10.0",
-    "typed-rpc": "^5.1.0"
+    "@jellyfin/sdk": "^0.10.0"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
