--- a/packages/modals-collection/package.json
+++ b/packages/modals-collection/package.json
@@ -32,16 +32,16 @@
     "@homarr/validation": "workspace:^0.1.0",
     "@mantine/core": "^7.12.2",
     "@tabler/icons-react": "^3.17.0",
-    "dayjs": "1.11.13",
-    "next": "14.2.11",
+    "dayjs": "^1.11.13",
+    "next": "^14.2.11",
     "react": "^18.3.1"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
-    "eslint": "^9.9.1",
-    "typescript": "^5.5.4"
+    "eslint": "^9.10.0",
+    "typescript": "^5.6.2"
   },
   "prettier": "@homarr/prettier-config"
 }
