--- a/packages/modals-collection/package.json
+++ b/packages/modals-collection/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@homarr/{{name}}",
+  "name": "@homarr/modals-collection",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -19,6 +19,22 @@
     "lint": "eslint",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@homarr/api": "workspace:^0.1.0",
+    "@homarr/common": "workspace:^0.1.0",
+    "@homarr/form": "workspace:^0.1.0",
+    "@homarr/modals": "workspace:^0.1.0",
+    "@homarr/notifications": "workspace:^0.1.0",
+    "@homarr/old-schema": "workspace:^0.1.0",
+    "@homarr/translation": "workspace:^0.1.0",
+    "@homarr/ui": "workspace:^0.1.0",
+    "@homarr/validation": "workspace:^0.1.0",
+    "@mantine/core": "^7.12.2",
+    "@tabler/icons-react": "^3.17.0",
+    "dayjs": "^1.11.13",
+    "next": "^14.2.11",
+    "react": "^18.3.1"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
