--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -36,6 +36,7 @@
     "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@testcontainers/mysql": "^10.13.1",
     "better-sqlite3": "^11.3.0",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.24.2",
