--- a/packages/spotlight/package.json
+++ b/packages/spotlight/package.json
@@ -21,8 +21,13 @@
     "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
-  "prettier": "@homarr/prettier-config",
   "dependencies": {
+    "@homarr/api": "workspace:^0.1.0",
+    "@homarr/auth": "workspace:^0.1.0",
+    "@homarr/common": "workspace:^0.1.0",
+    "@homarr/definitions": "workspace:^0.1.0",
+    "@homarr/modals": "workspace:^0.1.0",
+    "@homarr/modals-collection": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/ui": "workspace:^0.1.0",
     "@mantine/core": "^7.12.2",
@@ -40,5 +45,6 @@
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.10.0",
     "typescript": "^5.6.2"
-  }
+  },
+  "prettier": "@homarr/prettier-config"
 }
