--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,9 +22,9 @@
     "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
-  "prettier": "@homarr/prettier-config",
   "dependencies": {
     "@homarr/common": "workspace:^0.1.0",
+    "@homarr/definitions": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
@@ -43,5 +43,6 @@
     "@types/css-modules": "^1.0.5",
     "eslint": "^9.10.0",
     "typescript": "^5.6.2"
-  }
+  },
+  "prettier": "@homarr/prettier-config"
 }
