--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ yarn-error.log*
 apps/tasks/tasks.cjs
 apps/websocket/wssServer.cjs
 apps/nextjs/.million/
+packages/cli/cli.cjs
 
 
 #personal backgrounds
