--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -39,6 +39,7 @@
     "@homarr/widgets": "workspace:^0.1.0",
     "@mantine/colors-generator": "^7.13.0",
     "@mantine/core": "^7.13.0",
+    "@mantine/dropzone": "^7.13.0",
     "@mantine/hooks": "^7.13.0",
     "@mantine/modals": "^7.13.0",
     "@mantine/tiptap": "^7.13.0",
