--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -38,6 +38,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "adm-zip": "^0.5.16",
     "dockerode": "^4.0.2",
     "next": "^14.2.13",
     "react": "^18.3.1",
@@ -48,6 +49,7 @@
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
+    "@types/adm-zip": "^0.5.5",
     "@types/dockerode": "^3.3.31",
     "eslint": "^9.11.1",
     "prettier": "^3.3.3",
