--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -25,6 +25,7 @@
   },
   "prettier": "@homarr/prettier-config",
   "dependencies": {
+    "@homarr/log": "workspace:^0.1.0",
     "dayjs": "^1.11.13",
     "next": "^14.2.13",
     "react": "^18.3.1",
