refactor: replace signIn callback with signIn event, adjust getUserByEmail in adapter to check provider

--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,7 @@
     "AUTH_OIDC_CLIENT_SECRET",
     "AUTH_OIDC_ISSUER",
     "AUTH_OIDC_SCOPE_OVERWRITE",
+    "AUTH_OIDC_GROUPS_ATTRIBUTE",
     "AUTH_LDAP_USERNAME_ATTRIBUTE",
     "AUTH_LDAP_USER_MAIL_ATTRIBUTE",
     "AUTH_LDAP_USERNAME_FILTER_EXTRA_ARG",
