wip: widget handler poc

--- a/apps/tasks/tsconfig.json
+++ b/apps/tasks/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@homarr/tsconfig/base.json",
   "compilerOptions": {
+    "lib": ["esnext"],
     "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"]
