--- a/apps/tasks/package.json
+++ b/apps/tasks/package.json
@@ -10,9 +10,9 @@
   "main": "./src/main.ts",
   "types": "./src/main.ts",
   "scripts": {
-    "build": "esbuild src/main.ts --bundle --platform=node --outfile=tasks.cjs",
+    "build": "esbuild src/main.ts --bundle --platform=node --loader:.css=text --outfile=tasks.cjs",
     "clean": "rm -rf .turbo node_modules",
-    "dev": "pnpm with-env tsx ./src/main.ts",
+    "dev": "pnpm with-env tsx --experimental-loader ./ignore-css-loader.mjs ./src/main.ts",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
