--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -22,8 +22,10 @@
     "lint": "eslint",
     "migration:mysql:generate": "drizzle-kit generate --config ./configs/mysql.config.ts",
     "migration:mysql:run": "drizzle-kit migrate --config ./configs/mysql.config.ts",
+    "migration:mysql:drop": "drizzle-kit drop --config ./configs/mysql.config.ts",
     "migration:sqlite:generate": "drizzle-kit generate --config ./configs/sqlite.config.ts",
     "migration:sqlite:run": "drizzle-kit migrate --config ./configs/sqlite.config.ts",
+    "migration:sqlite:drop": "drizzle-kit drop --config ./configs/sqlite.config.ts",
     "push:mysql": "drizzle-kit push --config ./configs/mysql.config.ts",
     "push:sqlite": "drizzle-kit push --config ./configs/sqlite.config.ts",
     "studio": "drizzle-kit studio --config ./configs/sqlite.config.ts",
