--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -56,7 +56,7 @@
     "dotenv-cli": "^7.4.2",
     "eslint": "^9.12.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.6.3",
-    "tsx": "4.19.1"
+    "tsx": "4.19.1",
+    "typescript": "^5.6.3"
   }
 }
