--- a/packages/integrations/package.json
+++ b/packages/integrations/package.json
@@ -33,7 +33,9 @@
     "@homarr/log": "workspace:^0.1.0",
     "@homarr/translation": "workspace:^0.1.0",
     "@homarr/validation": "workspace:^0.1.0",
-    "@jellyfin/sdk": "^0.10.0"
+    "@jellyfin/sdk": "^0.10.0",
+    "@types/xml2js": "^0.4.14",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
