feat: #1408 add local icon repository

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -22,6 +22,7 @@
   },
   "prettier": "@homarr/prettier-config",
   "dependencies": {
+    "@homarr/db": "workspace:^0.1.0",
     "@homarr/common": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0"
   },
