feat: #1408 add local icon repository (#1413)

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -23,6 +23,7 @@
   "prettier": "@homarr/prettier-config",
   "dependencies": {
     "@homarr/common": "workspace:^0.1.0",
+    "@homarr/db": "workspace:^0.1.0",
     "@homarr/log": "workspace:^0.1.0"
   },
   "devDependencies": {
