--- a/.github/workflows/e2e-trigger.yml
+++ b/.github/workflows/e2e-trigger.yml
@@ -14,8 +14,7 @@ jobs:
       SKIP_LABEL: e2e-skip
 
     steps:
-      - name: Check for e2e-skip label
-        id: check_skip
+      - name: Emergency Skip
         if: contains(github.event.pull_request.labels.*.name, env.SKIP_LABEL)
         run: |
           echo "E2E tests skipped due to e2e-skip label"
