fix: fix i18n-ally extension config

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "yoavbls.pretty-ts-errors",
-    "million.million-lint"
+    "million.million-lint",
+    "lokalise.i18n-ally"
   ]
 }
