wip: restructure import methods, add users import

--- a/packages/old-import/package.json
+++ b/packages/old-import/package.json
@@ -6,7 +6,8 @@
   "exports": {
     ".": "./index.ts",
     "./prepare/multiple": "./src/prepare/multiple.ts",
-    "./prepare": "./src/prepare/index.ts"
+    "./prepare": "./src/prepare/index.ts",
+    "./migration": "./src/migration/index.ts"
   },
   "typesVersions": {
     "*": {
