feat: add dashdot integration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,11 @@
     "gridstack",
     "homarr",
     "jellyfin",
+    "llen",
+    "lpop",
+    "lpush",
+    "lrange",
+    "ltrim",
     "mantine",
     "manuel-rw",
     "Meierschlumpf",
