--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -11,10 +11,11 @@
   },
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
+  "prettier": "@homarr/prettier-config",
   "dependencies": {
     "@next/eslint-plugin-next": "^14.2.18",
     "eslint-config-prettier": "^9.1.0",
@@ -30,6 +31,5 @@
     "@homarr/tsconfig": "workspace:^0.1.0",
     "eslint": "^9.16.0",
     "typescript": "^5.7.2"
-  },
-  "prettier": "@homarr/prettier-config"
+  }
 }
