--- a/packages/definitions/package.json
+++ b/packages/definitions/package.json
@@ -17,9 +17,9 @@
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "postinstall": "tsx ./src/docs/codegen.ts",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "tsx ./src/docs/codegen.ts"
+    "typecheck": "tsc --noEmit"
   },
   "prettier": "@homarr/prettier-config",
   "dependencies": {
