--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,6 +22,7 @@
     "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
+  "prettier": "@homarr/prettier-config",
   "dependencies": {
     "@homarr/common": "workspace:^0.1.0",
     "@homarr/definitions": "workspace:^0.1.0",
@@ -43,6 +44,5 @@
     "@types/css-modules": "^1.0.5",
     "eslint": "^9.16.0",
     "typescript": "^5.7.2"
-  },
-  "prettier": "@homarr/prettier-config"
+  }
 }
