wip: work on initial oldmarr import

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -30,6 +30,7 @@
     "@homarr/modals-collection": "workspace:^0.1.0",
     "@homarr/notifications": "workspace:^0.1.0",
     "@homarr/old-schema": "workspace:^0.1.0",
+    "@homarr/old-import": "workspace:^0.1.0",
     "@homarr/redis": "workspace:^0.1.0",
     "@homarr/server-settings": "workspace:^0.1.0",
     "@homarr/spotlight": "workspace:^0.1.0",
@@ -39,6 +40,7 @@
     "@homarr/widgets": "workspace:^0.1.0",
     "@mantine/colors-generator": "^7.14.3",
     "@mantine/core": "^7.14.3",
+    "@mantine/dropzone": "^7.14.3",
     "@mantine/hooks": "^7.14.3",
     "@mantine/modals": "^7.14.3",
     "@mantine/tiptap": "^7.14.3",
