--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -39,6 +39,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "adm-zip": "0.5.16",
     "dockerode": "^4.0.2",
     "next": "^14.2.18",
     "react": "^18.3.1",
@@ -49,6 +50,7 @@
     "@homarr/eslint-config": "workspace:^0.2.0",
     "@homarr/prettier-config": "workspace:^0.1.0",
     "@homarr/tsconfig": "workspace:^0.1.0",
+    "@types/adm-zip": "0.5.7",
     "@types/dockerode": "^3.3.32",
     "eslint": "^9.15.0",
     "prettier": "^3.4.1",
