fix: auto-merge crowdin pr not working

--- a/.github/workflows/crowdin-schedule-download.yml
+++ b/.github/workflows/crowdin-schedule-download.yml
@@ -46,4 +46,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.obtainToken.outputs.token }}
         run: |
-          gh pr merge ${{steps.crowdin-download.outputs.pull_request_number}} --auto --merge --squash --delete-branch --subject "chore(lang): updated translations from crowdin"
+          gh pr merge ${{steps.crowdin-download.outputs.pull_request_number}} --auto --squash --delete-branch --subject "chore(lang): updated translations from crowdin"
